--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+  <meta>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -9,9 +9,15 @@
     integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
     crossorigin="anonymous" />
     <script src="path/to/dist/feather.js"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>ConnectBush</title>
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ConnectBush">
+    <meta name="description" content="All your links. All in one."/>
+    <meta name="author" content="Nigel Mckenzie-Ryan">
+    <meta property="og:image" content="../logoBlack.png">
   </head>
-  <body>
+  <img>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
