Netify was deployed at https://connect-bush.netlify.app/. removed the purge options from tailwind.

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,12 @@
     crossorigin="anonymous" />
     <script src="path/to/dist/feather.js"></script>
     <title>ConnectBush</title>
+    
     <meta property="og:locale" content="en_GB" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="ConnectBush">
     <meta name="description" content="All your links. All in one."/>
+    <meta property="og:url" content="https://connect-bush.netlify.app/" />
     <meta name="author" content="Nigel Mckenzie-Ryan">
     <meta property="og:image" content="../logoBlack.png">
   </head>
