fixed up animation, and header

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="All your links. All in one."/>
     <meta property="og:url" content="https://connect-bush.netlify.app/" />
     <meta name="author" content="Nigel Mckenzie-Ryan">
-    <meta property="og:image" content="../logoBlack.png">
+    <meta property="og:image" content="../assets/logoBlack.png">
   </head>
   <img>
     <noscript>
